--- a/index.html
+++ b/index.html
@@ -7,5 +7,25 @@
   </head>
 
 
+<h1>Sogi's Staple Recipes</h1>
+
+<ul>
+  <li>
+<a href="recipes/braisedchicken.html">Braised Chicken Thighs</a>
+  </li>
+  <li>
+
+  </li>
+  <li>
+
+  </li>
+  <li>
+
+  </li>
+  <li>
+
+  </li>
+</ul>
+
 
 <html>
