Body added index, css used to color, move,body and ul

--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
   <link rel="stylesheet" href="css/style.css"/>
   </head>
 
+<body>
 
-<h1>Sogi's Staple Recipes</h1>
 
-<ul>
+
+<h1 class="homepage">Sogi's Staple Recipes</h1>
+
+<ul class="recipes">
   <li>
 <a href="recipes/braisedchicken.html">Braised Chicken Thighs</a>
   </li>
@@ -27,5 +30,6 @@
   </li>
 </ul>
 
+</body>
 
 <html>
