Added div borders around recipe list
git status

--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
 
 <body>
 
+<div class="header">
 
 
 <h1 class="homepage">Sogi's Staple Recipes</h1>
+
+<img class="main"src="https://media2.giphy.com/media/CNocEFcF9IBegtgW3q/giphy.gif?cid=790b761122e8ab8ee11013b84301b0c6bc8cbd5b2ec7367c&rid=giphy.gif&ct=g" alt="Lets get cooking">
+</div>
+<div class="menu">
+
 
 <ul class="recipes">
   <li>
@@ -29,6 +35,8 @@
 <a href="recipes/peachcob.html">Southern Peach Cobbler</a>
   </li>
 </ul>
+
+</div>
 
 </body>
 
