Further developed layout of index.html

--- a/index.html
+++ b/index.html
@@ -8,12 +8,25 @@
 
 <body>
 
-<div class="header">
+
+
+<div class="title">
 
 
 <h1 class="homepage">Sogi's Staple Recipes</h1>
+</div>
+<p class="tab"> The following is a list of the top 5 recipes that get made in my household, enjoy!</p>
 
 <img class="main"src="https://media2.giphy.com/media/CNocEFcF9IBegtgW3q/giphy.gif?cid=790b761122e8ab8ee11013b84301b0c6bc8cbd5b2ec7367c&rid=giphy.gif&ct=g" alt="Lets get cooking">
+
+
+
+<p class="desc"> And thanks again to Odin project for getting me to this point, shoutout to everyone who is on this journey we got this!</p>
+
+
+<img class="second"src="https://images.squarespace-cdn.com/content/v1/53b839afe4b07ea978436183/1608506169128-S6KYNEV61LEP5MS1UIH4/traditional-food-around-the-world-Travlinmad.jpg?format=2500w" alt="Lets get cooking"
+
+
 </div>
 <div class="menu">
 
