Added link to homepage on braised, img, and layout

--- a/recipes/braisedchicken.html
+++ b/recipes/braisedchicken.html
@@ -6,6 +6,34 @@
   <link rel="stylesheet" href="css/style.css"/>
   </head>
 
+<body>
+  <img class="braise"src="https://static01.nyt.com/images/2015/01/07/dining/07COOKBOOKTWELVERECIPES2/07COOKBOOKTWELVERECIPES2-articleLarge.jpg?w=1280&q=75" alt="Lets get cooking">
 
+<h1 class="bring">
+
+  Ingredients
+<ul>
+  <li>
+
+  </li>
+  <li>
+
+  </li>
+  <li>
+
+  </li>
+  <li>
+
+  </li>
+</ul>
+
+</h1>
+
+
+
+
+<a href="../index.html">Homepage</a>
+
+</body>
 
 <html>
