fixed href to style.css on recipe pages

--- a/recipes/braisedchicken.html
+++ b/recipes/braisedchicken.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Sogis Braised</title>
-  <link rel="stylesheet" href="css/style.css"/>
+  <link rel="stylesheet" href="../css/style.css"/>
   </head>
 
 <body>
@@ -13,17 +13,44 @@
 
   Ingredients
 <ul>
-  <li>
-
+  <li class="bralist">
+    6 chicken legs, thigh and drumstick together
+  </li>
+  <li class="bralist">
+    Kosher salt and black pepper to taste
   </li>
   <li>
-
+    All-purpose flour, for dredging
   </li>
   <li>
-
+    4 to 5 tablespoons neutral oil, or unsalted butter
   </li>
   <li>
-
+    ¾ cup white or red wine, beer, chicken stock or water
+  </li>
+  <li>
+    1 large yellow onion, peeled and diced
+  </li>
+  <li>
+    1 large carrot, peeled and diced
+  </li>
+  <li>
+    2 celery stalks, diced
+  </li>
+  <li>
+    2 cloves garlic, peeled and diced
+  </li>
+  <li>
+    3 sprigs of thyme, rosemary or sage, leaves removed and roughly chopped
+  </li>
+  <li>
+    1 bay leaf
+  </li>
+  <li>
+    3 cups chicken stock, or water
+  </li>
+  <li>
+    2 tablespoons roughly chopped parsley leaves
   </li>
 </ul>
 
