--- a/recipes/peachcob.html
+++ b/recipes/peachcob.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Sogis Peach</title>
-  <link rel="stylesheet" href="css/style.css"/>
+  <link rel="stylesheet" href="../css/style.css"/>
   </head>
 
 
