--- a/recipes/braisedchicken.html
+++ b/recipes/braisedchicken.html
@@ -7,6 +7,9 @@
   </head>
 
 <body>
+  <h1 class="head">
+    Braised Chicken Thighs
+  </h1>
   <img class="braise"src="https://static01.nyt.com/images/2015/01/07/dining/07COOKBOOKTWELVERECIPES2/07COOKBOOKTWELVERECIPES2-articleLarge.jpg?w=1280&q=75" alt="Lets get cooking">
 
 <h1 class="bring">
