All pages laid out and connected

--- a/recipes/peachcob.html
+++ b/recipes/peachcob.html
@@ -7,96 +7,84 @@
   </head>
 
 <body>
-  <h1 class="head1">
-    Bolognese
+  <h1 class="head4">
+    Southern Peach Cobbler
     </h1>
-  <img class="braise1"src="https://assets.bonappetit.com/photos/5c2f8fe26558e92c8a622671/1:1/w_2240,c_limit/bolognese-1.jpg" alt="Lets get cooking">
+  <img class="braise4"src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F07%2F07%2F51535-fresh-southern-peach-cobbler-ddmfs-0653-1x1-1.jpg" alt="Lets get cooking">
 
 <h1 class="bring">
 
   Ingredients
 </h1>
-
+<h1 class="bring2">
+Instructions
+</h1>
 
 <div class="bralist">
 
 
 <ul>
   <li>
-    1 medium onion, chopped
+    8 fresh peaches - peeled, pitted and sliced into thin wedges
   </li>
   <li>
-    1 celery stalk, chopped
+    ¼ cup white sugar
   </li>
   <li>
-    1 small carrot, peeled, chopped
+    ¼ cup brown sugar
   </li>
   <li>
-    3 Tbsp. extra-virgin olive oil
+    ¼ teaspoon ground cinnamon
   </li>
   <li>
-    1 lb. ground beef chuck (20% fat), patted dry
+    ⅛ teaspoon ground nutmeg
   </li>
   <li>
-    Kosher salt
+    1 teaspoon fresh lemon juice
   </li>
   <li>
-    3 oz. thinly sliced pancetta, finely chopped
+    2 teaspoons cornstarch
   </li>
   <li>
-    1 cup dry white wine
+    1 cup all-purpose flour
   </li>
   <li>
-    ⅓ cup tomato paste
+    ¼ cup white sugar
   </li>
   <li>
-    1 bay leaf
+    ¼ cup brown sugar
   </li>
   <li>
-    Pinch of finely grated nutmeg
+    1 teaspoon baking powder
   </li>
   <li>
-    2 cups (or more) homemade chicken stock or low-sodium chicken broth
+    ½ teaspoon salt
   </li>
   <li>
-    1 cup whole milk
+    6 tablespoons unsalted butter, chilled and cut into small pieces
   </li>
   <li>
-    1 lb. fresh tagliatelle or pappardelle, or dry rigatoni
+    ¼ cup boiling water
   </li>
   <li>
-    2 oz. finely grated Parmesan (about ½ cup), plus more for serving
   </li>
 </ul>
-<h1 class="bring">
-Instructions
-</h1>
+
 
 <ol>
 <li>
-  Pulse onion, celery, and carrot in a food processor until very finely chopped. Transfer to a small bowl.
+  Preheat oven to 425 degrees F (220 degrees C).
 </li>
 <li>
-  Heat oil in a Dutch oven or other large pot over medium. Break beef into small clumps (about 1½") and add to pot; season lightly with salt. Cook, stirring occasionally but not breaking meat apart, until beef is lightly browned but not crisp, 6–8 minutes. It may be gray in spots (that’s okay!) and still a little pink in the center. Using a slotted spoon, transfer beef to a medium bowl.
+  In a large bowl, combine peaches, 1/4 cup white sugar, 1/4 cup brown sugar, 1/4 teaspoon cinnamon, nutmeg, lemon juice, and cornstarch. Toss to coat evenly, and pour into a 2 quart baking dish. Bake in preheated oven for 10 minutes.
 </li>
 <li>
-  Wipe out pot. Cook pancetta in pot over medium heat, stirring occasionally, until pancetta has released some of its fat and is crisp, 6–8 minutes. Add onion mixture to pot and cook, stirring occasionally, until vegetables are very soft and beginning to stick to surface, 6–8 minutes.
+  Meanwhile, in a large bowl, combine flour, 1/4 cup white sugar, 1/4 cup brown sugar, baking powder, and salt. Blend in butter with your fingertips, or a pastry blender, until mixture resembles coarse meal. Stir in water until just combined.
 </li>
 <li>
-  Return beef to pot and pour in wine. Reduce heat to medium-low and cook, smashing down on beef with a wooden spoon, until wine is evaporated, surface of pot is almost dry, and meat is finely ground, 12–15 minutes. (The meat should be reduced to what looks like little bits. It takes a bit of effort, but you can take breaks.) Add tomato paste, bay leaf, and nutmeg and cook, stirring occasionally and still pressing down on meat, until tomato paste is slightly darkened, about 5 minutes.
+  Remove peaches from oven, and drop spoonfuls of topping over them. Sprinkle entire cobbler with the sugar and cinnamon mixture. Bake until topping is golden, about 30 minutes.
 </li>
-<li>
-  Pour stock and milk into pot; add a pinch of salt. Reduce heat to the lowest setting and cook, uncovered and stirring occasionally, until meat is very, very tender, 2–2½ hours. There shouldn’t be any rapid bubbles at this stage. Instead, the sauce should release the occasional small bubble or two. When finished, the sauce should have the texture of and look like a sloppy joe mixture. If the liquid reduces before the meat is completely tender, add an extra ½ cup stock and continue cooking. Discard bay leaf. Taste sauce and adjust seasoning with salt; keep warm.
-</li>
-<li>
-  Cook pasta in a large pot of boiling salted water. If using fresh pasta, cook about 3 minutes. If using dry, cook until very al dente, about 2 minutes less than package directions.
-</li>
-<li>
-  Using tongs, transfer pasta to pot with sauce. Add 1 cup pasta cooking liquid and ½ cup Parmesan. Increase heat to medium, bring to a simmer, and cook, tossing constantly, until pasta is al dente and liquid is slightly thickened, about 2 minutes.
-</li>
-<li>
-  Transfer pasta to a platter and top with more Parmesan.
-</li>
+
 </ol>
 </div>
 
