Added desc paragraph below recipe img

--- a/recipes/bolognese.html
+++ b/recipes/bolognese.html
@@ -12,14 +12,15 @@
     </h1>
   <img class="braise1"src="https://assets.bonappetit.com/photos/5c2f8fe26558e92c8a622671/1:1/w_2240,c_limit/bolognese-1.jpg" alt="Lets get cooking">
 
-<h1 class="bring">
+<p>It doesn’t take a lot of ingredients (or a lot of money) to make a classic Bolognese recipe. What it does take, though, is patience for the sauce to achieve the ideal authentic texture. You’re going to go low and slow—it’ll take around 3 hours, but most of that cook time is hands-off. </p>
 
-  Ingredients
-</h1>
 
 
 <div class="bralist">
+  <h1 class="bring">
 
+    Ingredients
+  </h1>
 
 <ul>
   <li>
