--- a/recipes/braisedchicken.html
+++ b/recipes/braisedchicken.html
@@ -11,16 +11,16 @@
     Braised Chicken Thighs
   </h1>
   <img class="braise"src="https://static01.nyt.com/images/2015/01/07/dining/07COOKBOOKTWELVERECIPES2/07COOKBOOKTWELVERECIPES2-articleLarge.jpg?w=1280&q=75" alt="Lets get cooking">
+<p>Here is a pleasant, delicious family meal adapted from the California chef Cal Peternell’s excellent home-cooking manifesto, “Twelve Recipes,” published in 2014 by HarperCollins. There are two steps to the process, which as Mr. Peternell points out can lead to endless improvisation. First, season the chicken and brown it well in a pan. Salt, pepper and flour are what’s called for in this basic recipe, but adding some paprika would be a delicious option, or some cumin, coriander, paprika and a dash of cinnamon and caraway for a scent of Morocco. Then, braise it in liquid — white wine for the classic, red wine for a coq-au-vin feel, or with beer, chicken stock or plain water. Mr. Peternell does his braising in the oven, but you could easily do it on the stovetop as well, simmering the chicken slowly beneath a lid. Pair with rice or boiled potatoes, with couscous, with big hunks of garlic bread.</p>
 
-<h1 class="bring">
-
-  Ingredients
-</h1>
 
 
 <div class="bralist">
 
+  <h1 class="bring">
 
+    Ingredients
+  </h1>
 <ul>
   <li>
     6 chicken legs, thigh and drumstick together
