--- a/recipes/peachcob.html
+++ b/recipes/peachcob.html
@@ -12,6 +12,12 @@
     </h1>
   <img class="braise4"src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F07%2F07%2F51535-fresh-southern-peach-cobbler-ddmfs-0653-1x1-1.jpg" alt="Lets get cooking">
 
+<p>A cobbler — not to be confused with a crisp or crumble — is a deep-dish fruit dessert with a sweetened fruit filling that is topped off with a biscuit-like dough. The dough may cover the entire dish or be dropped by the spoonful, earning it the name "cobbler" for its resemblance to a cobblestone street. It gives you the same fruit-and-pastry combination as pie, but without all the effort.
+
+In the case of peach cobbler, fresh, frozen, or canned peaches may be combined with sugar, spices, lemon juice, and cornstarch (for thickening). As with all cobblers, it's finished off with a biscuit-like topping and sprinkled with a cinnamon-sugar mixture.
+
+</p>
+
 <h1 class="bring">
 
   Ingredients
